# minecraft-mcp-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml  deploy-docs.yml
docs/: index.md
docs/.vitepress/config/: en.ts  index.ts  zh.ts
docs/guide/: architecture.md  configuration.md  getting-started.md  tools.md
docs/zh/: index.md
docs/zh/guide/: architecture.md  configuration.md  getting-started.md  tools.md
patches/rmcp/: Cargo.toml
patches/rsa/: Cargo.toml
patches/rsa/src/: encoding.rs
src/: block_data.rs  channel.rs  command_validate.rs  compound_ops.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  mining_calc.rs  snapshot.rs  state.rs  tool_select.rs  types.rs
src/bot/: commands.rs  connection.rs  events.rs  mod.rs  ops.rs  snapshot_updater.rs
src/mcp/: mod.rs  render.rs  server.rs  tools_act.rs  tools_block.rs  tools_chat.rs  tools_combat.rs  tools_container.rs  tools_item.rs  tools_movement.rs  tools_query.rs
src/ui/: app.rs  fonts.rs  mcp_config.rs  mod.rs  settings.rs  status.rs
src/ui/i18n/: en.rs  mod.rs  zh_cn.rs
tests/: integration.rs  proptest.rs
