[package]
name = "minecraft-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
azalea = "0.16"
azalea-inventory = "0.16"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
proptest = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
eyre = "0.6"
thiserror = "2"
bevy_ecs = "0.18"
uuid = "1"

[dev-dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
linker_messages = "allow"
