[package]
name = "minecraft-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
azalea = "0.15.1"
azalea-inventory = "0.15.1"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
eframe = "0.34.3"
egui = "0.34.3"
tokio = { version = "1.50", features = ["full"] }
arc-swap = "1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
schemars = "1.0.3"
proptest = "1.6"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
anyhow = "1.0.100"
eyre = "0.6.12"
thiserror = "2.0.12"
bevy_ecs = "0.18"
uuid = "1.20"
tokio-util = { version = "0.7", features = ["rt"] }
image = "0.25"
base64 = "0.22"
axum = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
linker_messages = "allow"

# Local patches to resolve dependency conflicts without committing patched
# upstream crates to git. See .gitignore for `patches/*`.
[patch.crates-io]
rsa = { path = "patches/rsa" }
rmcp = { path = "patches/rmcp" }


